add support enabled mod

--- a/apache/map.jinja
+++ b/apache/map.jinja
@@ -35,4 +35,4 @@
         'logdir': '/var/log/',
         'wwwdir': '/usr/local/www/apache22/',
     },
-}, merge=salt['pillar.get']('apache:lookup')) %}
+}, merge=salt['pillar.get']('apache')) %}
